--- a/src/Components/Messages/Messages.module.css
+++ b/src/Components/Messages/Messages.module.css
@@ -34,3 +34,8 @@
     background-color: #ffffff;
 }
 
+.dialogs textarea {
+    min-height: 50px;
+    max-width: 200px;
+    border: 2px solid black;
+}
