--- a/src/App.css
+++ b/src/App.css
@@ -53,7 +53,7 @@ img, svg, video {
 .main {
   margin-top: 108px;
   display: flex;
-  padding: 0 16px;
+  padding: 0 16px 16px 16px;
 
   font-family: 'Montserrat', sans-serif;
 }
